Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjObject.quorum
class Main
    action Main
        Object v
    Text t
        v:SetValue("text")
        Test(v)
    end

    action Test(Text var)
    end
end
